fixed merge spacing

--- a/main-db.css
+++ b/main-db.css
@@ -43,9 +43,9 @@
   align-items: center;
 }
 
-body {
+/* body {
   margin: 40px;
-}
+} */
 
 #hero-banner {
   margin-top: 2rem;
